@@ -1,6 +1,7 @@
 Revision history for Perl-PrereqScanner
 
 {{$NEXT}}
+ - throw an exception if PPI fails to parse code
 
 0.101891  2010-09-05 15:31:49 America/New_York
  - add a core scanner for Test::More's done_testing
